Fix height on mobile nav header

--- a/assets/css/components/_nav.scss
+++ b/assets/css/components/_nav.scss
@@ -22,7 +22,7 @@
 }
 
 .nav__mobile-header {
-    height: 44px;
+    height: 46px;
 }
 
 .nav__mobile-header:before, .nav__mobile-header:after {
